--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,7 @@ gradle-app.setting
 # Eclipse Gradle plugin generated files
 # Eclipse Core
 # JDT-specific (Eclipse Java Development Tools)
+
+
+#Lösenorden:
+.env
